# rhoai-datasets

./: .coderabbit.yaml  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/add-connector/: SKILL.md
.claude/skills/review-dataset/: SKILL.md
datasets/harbor-maas-v1/: eval.yaml
datasets/harbor-maas-v1/task-0000/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0001/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0002/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0003/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0004/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0005/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0006/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0007/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0008/: instruction.md
datasets/harbor-maas-v1/task-0009/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0010/: instruction.md
datasets/harbor-maas-v1/task-0011/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0012/: input.yaml  instruction.md
datasets/harbor-maas-v1/task-0013/: input.yaml  instruction.md  task.toml
docs/brainstorms/: datasets-platform-requirements.md
scripts/: deploy-to-eval-harness.sh
src/datasets/: __init__.py  cli.py  patterns.py
tests/integration/: test_end_to_end.py
tests/unit/: test_ai_detection.py  test_catalog.py  test_cli.py  test_connectors.py  test_harbor_factory.py  test_metadata.py  test_mlflow_factory.py  test_pipeline.py  test_scorer.py  test_skillsbench_factory.py
(+183 files in other folders)
