[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhai-datasets"
version = "0.1.0"
description = "Dataset creation and curation platform for Red Hat AI evaluation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["datasets", "evaluation", "harbor", "skillsbench", "mlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4", "mypy>=1.10", "pre-commit>=3.7"]
test = ["pytest>=8.2", "pytest-cov>=5.0", "pytest-asyncio>=0.23", "respx>=0.21"]
github = ["PyGithub>=2.3"]
jira = ["jira>=3.8"]
mlflow = ["mlflow>=2.10"]
all = ["rhai-datasets[github,jira,mlflow]"]

[project.scripts]
datasets = "datasets.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datasets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source_pkgs = ["datasets"]
branch = true

[tool.coverage.report]
show_missing = true
